--- a/spring-project/src/main/resources/application.properties
+++ b/spring-project/src/main/resources/application.properties
@@ -17,3 +17,4 @@ spring.jpa.database=MYSQL
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
+server.error.include-message=always
