--- a/ms-order/src/main/resources/bootstrap.properties
+++ b/ms-order/src/main/resources/bootstrap.properties
@@ -1,5 +1,11 @@
 spring.application.name=order
 
-server.port=10000
+server.port=${APP_PORT:10000}
 
 spring.cloud.config.uri=http://127.0.0.1:8888
+
+info.uygulama=order mic
+info.uygulama.portu=${server.port}
+info.test.versiyon=1.0.0
+info.uygulama.versiyonu=1.0.0.190
+info.app.version=@project.version@
